# colorprint3

./: README.md  SECURITY.md  __init__.py  pyproject.toml  setup.py  ubuntu.py  windows.py
.github/workflows/: pythonpackage.yml
colorprint3/: __init__.py  ubuntu.py  windows.py
src/colorprint3/: __init__.py
